finished off assign 3 last friday

--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -40,6 +40,13 @@
   publisher={ACM}
 }
 
+@ONLINE{glpk,
+  author = {Makhorin, Andrew},
+  title = {{GLPK} - {GNU} Project - Free Software Foundation},
+  year = {2008},
+  url = {http://www.gnu.org/software/glpk/}
+}
+
 %Hen cplex ibm
 @article{hen99,
   title={{Combinatorial optimization in OPL studio}},
