--- a/comp5045/assignment3.tex
+++ b/comp5045/assignment3.tex
@@ -42,6 +42,23 @@ For simplicity, and indeed in this case, we presume no 2 points share the same x
 
 \section {Colinear Points}
 
+8.6: constructing a doubly-connected edge list for the arrangement can be done in n^2, each iteration takes n
+to find max, loop through edges, cound incidences, if 2 edges incident to a vertex in doubleedge then 2 points colinear, 3 = 3
+
+euler's formula, we know there are n^2 edges for planar doubly-connected-edge-list, run through all edges count incidences to vertices
+
+pp184-185
+Mark de Berg
+Otfried Cheong
+Marc van Kreveld
+Mark Overmar
+
+Computational Geometry
+Algorithms and Applications
+3rd ed
+
+Springer-Verlag Berlin Heidelberg
+
 \section {Populous Cities}
 
 \section {Trapezoidal Map Size}
